# NPRG045

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Features.md  Git.md  GitRebase.md  README.md  Tools.md  build.sh
cmake/: bootstrap.cmake  create_executable.cmake  libgit2.cmake  qt.cmake
docs/: GitSequencer.md
experiments/: CMakeLists.txt
experiments/common/: GitGraph.h  utils.h
experiments/docs/: Features.md
experiments/rebase/: main.cpp  util.h
experiments/sequencer/: App.cpp  App.h  ListItem.h  RebaseViewWidget.cpp  RebaseViewWidget.h  clear_layout.h  main.cpp  parser.h
experiments/sequencer/commit/: CommitViewWidget.h
experiments/sequencer/graph/: Graph.cpp  Graph.h  Node.cpp  Node.h
include/: App.h  build.h
include/action/: Action.h  ActionManager.h  Converter.h
include/conflict/: ConflictManager.h  conflict.h  conflict_iterator.h
include/core/conflict/: ConflictManager.h  conflict.h  conflict_iterator.h
include/core/git/: GitGraph.h  commit.h  diff.h  error.h  head.h  parser.h  paths.h  types.h
include/core/patch/: PatchSplitter.h  split.h
include/core/state/: Command.h  CommandHistory.h  State.h
include/core/utils/: debug.h  optional_uint.h  strings.h  todo.h  unexpected.h
include/git/: GitGraph.h  commit.h  diff.h  error.h  head.h  parser.h  paths.h  types.h
include/gui/: clear_layout.h  color.h  editor_height.h  file.h  open_file.h
include/gui/style/: ConflictStyle.h  DiffStyle.h  GlobalStyle.h  StyleManager.h  load_style.h
include/gui/widget/: CommitMessageWidget.h  CommitViewWidget.h  ConflictDialog.h  ConflictEditor.h  ConflictFile.h  ConflictHighlighter.h  ConflictWidget.h  DiffEditor.h  DiffEditorLine.h  DiffFile.h  DiffWidget.h  LineSplitter.h  ListItem.h  NamedListWidget.h  RebaseViewWidget.h  SLabel.h  ScrollListWidget.h  SettingsDialog.h  ShortcutEditor.h  WelcomeWidget.h
include/gui/window/: PreferencesWindow.h
include/logging/: Log.h
include/patch/: PatchSplitter.h  split.h
include/state/: Command.h  CommandHistory.h  State.h
include/utils/: debug.h  optional_uint.h  strings.h
include/widget/: CommitViewWidget.h  ListItem.h  NamedListWidget.h  RebaseViewWidget.h
include/widget/graph/: Graph.h  Node.h
resources/: CMakeLists.txt
resources/styles/: light.qss
src/: App.cpp  CMakeLists.txt  main.cpp
src/action/: ActionManager.cpp  CMakeLists.txt  Converter.cpp
src/conflict/: ConflictManager.cpp  conflict.cpp  conflict_iterator.cpp
src/core/: CMakeLists.txt
src/core/conflict/: CMakeLists.txt  ConflictManager.cpp  conflict.cpp  conflict_iterator.cpp
src/core/git/: CMakeLists.txt  commit.cpp  diff.cpp  parser.cpp  paths.cpp
src/core/patch/: PatchSplitter.cpp  split.cpp
src/git/: commit.cpp  diff.cpp  parser.cpp  paths.cpp
src/gui/: CMakeLists.txt  color.cpp  file.cpp  open_file.cpp
src/logging/: CMakeLists.txt  Log.cpp
src/patch/: CMakeLists.txt  PatchSplitter.cpp  split.cpp
src/state/: CommandHistory.cpp  State.cpp
src/widget/: CommitViewWidget.cpp  RebaseViewWidget.cpp
tools/: CMakeLists.txt  git_env.in.sh  rebase-run.in.sh  wrapper.in.sh
(+31 files in other folders)
